assets/css/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    :root {
        font-synthesis: none;
        text-rendering: optimizeLegibility;
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;
        font-family: 'Nunito', 'Noto Sans', sans-serif;
        -ms-overflow-style: none;
        scrollbar-width: none;
    }

    ::-webkit-scrollbar {
        display: none;
    }

    :root, #__nuxt, body {
        @apply h-full w-full bg-primary-50/80 text-gray-800;
    }

}

.text-gray-800 {
    @apply selection:bg-gray-800/20;
}

.text-primary {
    @apply selection:bg-primary/20 !important;
}

